# CI-Nanocourse-repo

./: .gitignore  Alex_clean_code_exercise.py  README.md  main.py  main4.py  main6.txt  pyproject.toml
.github/: github_test.py
.github/workflows/: ci.yml  main.yml
docs/: .txt
docs/source/: conf.py  index.rst
scripts/: main4.py  pyproject.toml
src/: conftest.py
src/ci_nanocourse_demo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/new_package_for_nanocourse/: __init__.py  hello.py  scratchy.py  stats.py
src/new_test_for_nanocourse/: test_stats.py
tests/: main.py
