[project]
name ="ci-nanocourse-demo"
version ="0.1.0"
description ="Demo project fot CI nanocourse"
[{ name = "Partner A + Partner B" }]
requires-python = ">= 3.9"
dependencies = []

[project.scripts]
new_package_for_nanocourse = "new_package_for_nanocourse.hello:main" 

[project.optional-dependencies]
tests = [
  "pytest",
]
