[project]
name = "ci-nanocourse-demo"
version = "0.1.0"
description = "Demo project for CI nanocourse"
authors = [{ name = "Partner A + Partner B" }]
requires-python = ">=3.9"
dependencies = []

[project.scripts]
new_package_for_nanocourse = "new_package_for_nanocourse.hello:main"

[project.optional-dependencies]
dev = [
  "pre-commit",
  "ruff",
]
test = [
  "pytest",
]
docs = [
    "numpydoc",
    "nbconvert",
    "sphinx<6.0.0",
    "sphinx_rtd_theme",
    "sphinx-copybutton",
    "sphinx-issues",
    "sphinx-design",
    "pyyaml",
    "pydata_sphinx_theme==0.10.0rc2",
    "sphinx-toolbox",
    "mss",
    "codespell"
]
